[tool.poetry]
name = "mos_parse"
version = "0.1.0"
description = ""
authors = ["smapl <a.mustafin00@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.3"
requests = "^2.25.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
