[tool.poetry]
name = "mos_parse"
version = "0.1.0"
description = ""
authors = ["smapl <a.mustafin00@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.3"
requests = "^2.25.1"
bs4 = "^0.0.1"
html5lib = "^1.1"
loguru = "^0.5.3"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
